gcc/testsuite/gm2/errors/fail/binaryconst.mod
MODULE binaryconst ;

VAR
   r: REAL ;
BEGIN
   r := 1.2 + 1
END binaryconst.
